--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -135,3 +135,8 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+
+---
+server:
+    port: 8888
